# tuc_sensor_kit_launch

common_sensor_launch/launch/: velodyne_HDL32E.launch.xml  velodyne_VLP32.launch.xml
tuc_sensor_kit_description/: CMakeLists.txt  package.xml
tuc_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
tuc_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
tuc_sensor_kit_launch/: CMakeLists.txt  package.xml
tuc_sensor_kit_launch/launch/: imu.launch.xml  lidar.launch.xml  sensing.launch.xml
