<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuc_sensor_kit_description</name>
  <version>0.1.0</version>
  <description>The tuc_sensor_kit_description package</description>
  <maintainer email="yousri.elhajji@tu-clausthal.de">Yousri Elhajji</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>velodyne_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
